--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,5 @@ android.library.reference.1=../AndEngine
 android.library.reference.2=../AndEnginePhysicsBox2DExtension
 android.library.reference.4=../AndEngineTexturePackerExtension
 android.library.reference.5=../AndEngineSVGTextureRegionExtension
+android.library.reference.6=../AndEngineAugmentedRealityExtension
+android.library.reference.7=../AndEngineLiveWallpaperExtension
