--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,11 +17,18 @@
             android:label="@string/title_activity_simple_base" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-       
+        </activity> 
+        <!--  Lanzamos activity por defecto -->
+       <!-- <activity
+            android:name=".TMXTiledMapExample" android:configChanges="orientation"
+            android:label="@string/title_activity_simple_base" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
     </application>
 
 </manifest>
